RESOLVED FIXED168648
REGRESSION(r212681): Crash when dragging links without a drag image
https://bugs.webkit.org/show_bug.cgi?id=168648
Summary REGRESSION(r212681): Crash when dragging links without a drag image
Carlos Garcia Campos
Reported 2017-02-21 01:00:01 PST
This happens in GTK+ port, because we don't use a drag image for links. It caused 10 crashes in the bots.
Attachments
Patch (3.30 KB, patch)
2017-02-21 01:04 PST, Carlos Garcia Campos
thorton: review+
Carlos Garcia Campos
Comment 1 2017-02-21 01:04:51 PST
Carlos Garcia Campos
Comment 2 2017-02-21 02:39:26 PST
Michael Catanzaro
Comment 3 2017-02-21 07:46:26 PST
(In reply to comment #0) > This happens in GTK+ port, because we don't use a drag image for links. By the way, that's terrible. We really should. I'm positive that somebody implemented this for us before, because I remember r-ing the patch years after it was posted.
Note You need to log in before you can comment on or make changes to this bug.